log
Sun, Mar 16, 2025  3:31:21 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Sun, Mar 16, 2025  6:37:56 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:34:10: error: 'List {aka struct List}' has no member named 'size'
     lista->size = 0 ;
          ^~
list.c:35:5: error: 'list' undeclared (first use in this function)
     list->current = NULL ;
     ^~~~
list.c:35:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
316edd7
Sun, Mar 16, 2025  6:38:15 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:34:10: error: 'List {aka struct List}' has no member named 'size'
     lista->size = 0 ;
          ^~
Compilation failed
f2d6004
Sun, Mar 16, 2025  6:40:08 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0ab0b99
Sun, Mar 16, 2025  6:56:05 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2e3ee38
Sun, Mar 16, 2025  6:56:47 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
60979bd
Sun, Mar 16, 2025  6:58:13 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
33b4b1f
Sun, Mar 16, 2025  6:58:56 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
89d4e88
Sun, Mar 16, 2025  7:01:50 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
9976adc
Sun, Mar 16, 2025  7:02:56 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4b0eb63
Sun, Mar 16, 2025  7:03:45 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
8c40051
Sun, Mar 16, 2025  7:04:09 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
8c54d9c
Sun, Mar 16, 2025  7:05:00 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
00f9da9
Sun, Mar 16, 2025  7:05:34 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
4340e67
Sun, Mar 16, 2025  7:06:30 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:54:31: error: 'list_tail' undeclared (first use in this function)
     if (list->current) return list_tail ;
                               ^~~~~~~~~
list.c:54:31: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
357a08b
Sun, Mar 16, 2025  7:06:40 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
cf73dc8
Sun, Mar 16, 2025  7:07:12 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
0fb4d0b
Sun, Mar 16, 2025  7:08:22 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:60:37: error: statement with no effect [-Werror=unused-value]
     if (list->current) list->current->data ;
                        ~~~~~~~~~~~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9981669
Sun, Mar 16, 2025  7:09:00 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e2559df
Sun, Mar 16, 2025  7:09:45 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
7550683
Sun, Mar 16, 2025  7:12:47 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
99cd847
Sun, Mar 16, 2025  7:17:11 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:67:15: error: 'Node {aka struct Node}' has no member named 'tail'
     list->head->tail = nuevoNodo ;
               ^~
Compilation failed
4e20d71
Sun, Mar 16, 2025  7:17:27 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
20ee3a5
Sun, Mar 16, 2025  7:18:52 PM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
af7d829
Sun, Mar 16, 2025  7:19:48 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
3eed449
Sun, Mar 16, 2025  7:21:01 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
65665b8
Sun, Mar 16, 2025  7:25:32 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:87:14: error: 'Node {aka struct Node}' has no member named 'current'
     nuevoNodo->current->next = nuevoNodo ;
              ^~
Compilation failed
fedf8b9
Sun, Mar 16, 2025  7:26:12 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:87:5: error: 'lista' undeclared (first use in this function)
     lista->current->next = nuevoNodo ;
     ^~~~~
list.c:87:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
696a497
Sun, Mar 16, 2025  7:26:20 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
0007b03
Sun, Mar 16, 2025  7:33:06 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
79937ae
Sun, Mar 16, 2025  7:37:55 PM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  11|1
total_score: 55/70
0b446e9
Sun, Mar 16, 2025  7:43:39 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
3084ee9
Sun, Mar 16, 2025  7:45:11 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:106:23: error: 'prev' undeclared (first use in this function)
     if (list->current-prev != NULL) list->current->prev->next = list->current->next ;
                       ^~~~
list.c:106:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
97d225d
Sun, Mar 16, 2025  7:45:23 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
e36e9e3
Sun, Mar 16, 2025  7:56:01 PM: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:115:35: error: 'List {aka struct List}' has no member named 'tai'; did you mean 'tail'?
         list->current->next = list->tai ;
                                   ^~
Compilation failed
d1b530d
